refactored models into single place
