# internal/handlers/workexperiences.go
@@ -6,7 +6,7 @@ import (
 	"net/http"
 	"resumegenerator/internal/auth"
 	"resumegenerator/internal/database"
-	"time"
+	"resumegenerator/pkg/resume"
 )
 
 type NewWorkResponsibility struct {
@@ -44,14 +44,9 @@ func HandleCreateWorkExperience(w http.ResponseWriter, r *http.Request, a *auth.
 		return
 	}
 
-	resume := database.GetResume(db, resumeId)
-	if resume == nil || resume.Id == "" {
+	res := database.GetResume(db, resumeId, userId)
+	if res == nil || res.Id == "" {
 		http.Error(w, "not found", 404)
-		return
-	}
-
-	if userId != resume.UserId {
-		http.Error(w, "unauthorized", 401)
 		return
 	}
 
@@ -66,53 +61,18 @@ func HandleCreateWorkExperience(w http.ResponseWriter, r *http.Request, a *auth.
 		return
 	}
 
-	var we struct {
-		Employer         string `json:"employer"`
-		Title            string `json:"title"`
-		Began            string `json:"began"`
-		Current          bool   `json:"current"`
-		Responsibilities []struct {
-			Responsibility string `json:"responsibility"`
-		} `json:"responsibilities"`
-		Location *string `json:"location"`
-		Finished *string `json:"finished"`
-	}
-	if err = json.Unmarshal(body, &we); err != nil {
+	we, err := resume.WorkExperienceFromJSON(body)
+	if err != nil {
 		http.Error(w, "bad request", 400)
 		return
 	}
 
-	if we.Employer == "" || we.Title == "" || we.Began == "" {
+	if we.Employer == "" || we.Title == "" {
 		http.Error(w, "bad request", 400)
 		return
 	}
 
-	began, err := time.Parse(time.RFC3339, we.Began)
-	if err = json.Unmarshal(body, &we); err != nil {
-		http.Error(w, "bad request", 400)
-		return
-	}
-
-	var finished *time.Time
-	if we.Finished != nil {
-		val, err := time.Parse(time.RFC3339, *we.Finished)
-		if err != nil {
-			http.Error(w, "bad request", 400)
-			return
-		}
-		finished = &val
-	}
-
-	workExperience, err := database.CreateWorkExperience(
-		db,
-		resume,
-		we.Employer,
-		we.Title,
-		began,
-		we.Current,
-		we.Location,
-		finished,
-	)
+	err = database.CreateWorkExperience(db, res, &we)
 	if err != nil {
 		internalError, _ := newInternalError(err, "cannot create work experience")
 		w.Write(internalError)
@@ -121,18 +81,7 @@ func HandleCreateWorkExperience(w http.ResponseWriter, r *http.Request, a *auth.
 		return
 	}
 
-	for _, responsibility := range we.Responsibilities {
-		_, err = database.CreateWorkResponsibility(db, &workExperience, responsibility.Responsibility)
-		if err != nil {
-			internalError, _ := newInternalError(err, "cannot create work responsibility")
-			w.Write(internalError)
-			w.Header().Set("content-type", "application/json")
-			w.WriteHeader(500)
-			return
-		}
-	}
-
-	response, err := json.Marshal(workExperience)
+	response, err := json.Marshal(we)
 	if err != nil {
 		internalError, _ := newInternalError(err, "cannot send work experience")
 		w.Write(internalError)
@@ -165,18 +114,13 @@ func HandleGetWorkExperiences(w http.ResponseWriter, r *http.Request, a *auth.Au
 		return
 	}
 
-	resume := database.GetResume(db, resumeId)
-	if resume == nil || resume.Id == "" {
+	res := database.GetResume(db, resumeId, userId)
+	if res == nil || res.Id == "" {
 		http.Error(w, "not found", 404)
 		return
 	}
 
-	if userId != resume.UserId {
-		http.Error(w, "unauthorized", 401)
-		return
-	}
-
-	workExperiences, err := resume.WorkExperiences(db)
+	we, err := database.ResumeWorkExperiences(db, res)
 	if err != nil {
 		internalError, _ := newInternalError(err, "cannot get work experiences")
 		w.Write(internalError)
@@ -185,7 +129,7 @@ func HandleGetWorkExperiences(w http.ResponseWriter, r *http.Request, a *auth.Au
 		return
 	}
 
-	response, err := json.Marshal(workExperiences)
+	response, err := json.Marshal(we)
 	if err != nil {
 		internalError, _ := newInternalError(err, "cannot send work experiences")
 		w.Write(internalError)
